--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             width: 100%;
             background-color: skyblue;
         }
+
+        @media (max-width: 500px) {
+            .environment{
+                width: 2000px;
+            }
+        }
         
         .full-flag{
             height: 600px;
